supabase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-deployment
  labels:
    app: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supabase
  template:
    metadata:
      labels:
        app: supabase
    spec:
      containers:
        - name: supabase
          image: supabase/postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: darryl
spec:
  rules:
    - http:
        paths:
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: ingress-conroller
                port:
                  number: 9090
